# SlicerMOOSE

./: CMakeLists.txt  LICENSE.txt  MOOSEExtension.py  README.md  run_moose.sh
ExtensionsIndex/: SlicerMOOSE.json  pull_request.md
MOOSE/: CMakeLists.txt  MOOSE.py
MOOSE/Resources/UI/: MOOSE.ui
Resources/UI/: MOOSEExtension.ui
Testing/: MOOSEExtensionTest.py
